--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -482,6 +482,7 @@ $header_breakpoint: 640px;
     .on {
       display: none;
       content-visibility: hidden;
+      transform: translateX(-2px);
     }
 
     .off {
