--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -61,8 +61,8 @@ body:not(.is-editor):not(.is-admin) {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(min(100%, var(--grid-columns-min, 308px)), 1fr));
   gap:
-    calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1))
-    calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1));
+    calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1) * var(--grid-sidebar-row-gap-multiplier, 1))
+    calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1) * var(--grid-sidebar-col-gap-multiplier, 1));
   contain: style layout;
 }
 
