--- a/css/collections.css
+++ b/css/collections.css
@@ -1,1 +1,1 @@
-.collection__taxonomies{margin-bottom:1.5rem}.collection__title{margin-bottom:2rem}.collection__tags-and-warnings{margin-top:2rem}
+.collection__header{margin-bottom:2rem}.collection__taxonomies{margin-bottom:1.5rem}.collection__tags-and-warnings{margin-top:2rem}
