--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -1659,3 +1659,100 @@ a[data-fcn-dialog-target] {
     object-fit: cover;
   }
 }
+
+// ==============================================================================
+// WIDGET EDITOR
+// ==============================================================================
+
+.wp-block-widget-area__panel-body-content {
+  container-type: inline-size;
+}
+
+.wp-block-widget-area__panel-body-content .block-editor-block-list__layout {
+  font-size: var(--fs-widget);
+  line-height: 1.7;
+
+  *,
+  ::before,
+  ::after {
+    box-sizing: border-box;
+  }
+
+  > .wp-block[class*="wp-block-"] {
+    --this-spacing: 0;
+
+    &:not(:last-child, .wp-block-list-item) {
+      margin-block-end: var(--layout-widget-spacing, 1.75rem);
+
+      &.wp-block-heading {
+        margin-block-end: calc(var(--layout-widget-spacing, 1.75rem) * var(--layout-widget-spacing-heading-multiplier, 0.5));
+      }
+    }
+  }
+
+  .widgettitle {
+    margin-block-end: calc(var(--layout-widget-spacing, 1.75rem) * var(--layout-widget-spacing-heading-multiplier, 0.5));
+  }
+
+  :is(h1, h2, h3, h4, h5, h6) {
+    line-height: 1.3;
+    margin: 0;
+  }
+
+  .wp-block-separator {
+    margin-top: calc(var(--hr-spacing) * 0.75);
+    margin-bottom: calc(var(--hr-spacing) * 0.75);
+  }
+
+  :is(.wp-block-heading, .widgettitle) {
+    &:is(h1) {
+      font-size: 1.6em;
+    }
+
+    &:is(h2) {
+      font-size: 1.5em;
+    }
+
+    &:is(h3) {
+      font-size: 1.4em;
+    }
+
+    &:is(h4) {
+      font-size: 1.3em;
+    }
+
+    &:is(h5) {
+      font-size: 1.2em;
+    }
+
+    &:is(h6) {
+      font-size: 1.1em;
+    }
+  }
+
+  :is(.wp-block-list, .wp-block-archives-list, .wp-block-categories-list) {
+    --list-item-spacing: 0.25em;
+    padding-left: 1.05em;
+  }
+
+  a:where(:not(.button, .wp-element-button)) {
+    color: inherit;
+
+    &:hover {
+      color: var(--inline-link-color-hover);
+    }
+
+    &.wp-block-latest-posts__post-title {
+      color: var(--heading-link-color-hover);
+    }
+  }
+
+  p {
+    margin-block-start: 0;
+    margin-block-end: var(--layout-widget-spacing, 1.75rem);
+
+    a:where(:not(.button, .wp-element-button)) {
+      color: var(--inline-link-color);
+    }
+  }
+}
