--- a/src/scss/common/_setup.scss
+++ b/src/scss/common/_setup.scss
@@ -51,139 +51,32 @@ article {
   contain: style; // Improve performance
 }
 
-:root a:where(:not(.wp-element-button, .modal-tooltip)):is(a) {
-  text-decoration: none; // WP bullshit
-}
-
-a:where(:not(.button, .wp-element-button, .modal-tooltip)) {
-  cursor: pointer;
-  color: var(--layout-link-color);
-  text-decoration: none;
-
-  &:hover {
-    color: var(--layout-link-color-hover);
-  }
-}
-
-hr {
-  overflow: hidden;
-  border: 0;
-  border-bottom: var(--layout-hr-border);
-  margin: max(2.5rem, var(--paragraph-spacing) + 1rem) auto;
-}
-
-:where(ins, del) {
-  font-size: inherit;
-  white-space: normal;
-  vertical-align: inherit;
-  text-shadow: none;
-  border-radius: 1px;
-
-  br {
-    display: none;
-  }
-}
-
-ins {
-  background: var(--ins-background);
-  color: var(--ins-color);
-  text-decoration: none;
-}
-
-del {
-  background: var(--del-background);
-  color: var(--del-color);
-  text-decoration: line-through;
-}
-
-sup {
-  font-size: 75%;
-  vertical-align: super;
-}
-
-sub {
-  font-size: 75%;
-  vertical-align: sub;
-}
-
-em {
-  font-style: italic;
-}
-
-strong {
-  font-weight: var(--font-weight-strong);
-  filter: var(--strong-filter);
-}
-
-b {
-  font-weight: var(--font-weight-medium);
-}
-
-details {
-  summary {
-    cursor: pointer;
-  }
-
-  &[open] summary {
-    margin-bottom: .375em;
-  }
-}
-
 label,
 button {
   cursor: pointer;
   user-select: none;
 }
 
-audio,
-video {
-  outline: 0;
-  min-width: 280px !important;
-}
-
 #wp-admin-bar-cloudinary-overlay {
   display: none;
 }
 
-acronym,
-abbr {
-  cursor: help;
-  text-decoration: underline var(--fg-900) dotted 1px;
-  text-underline-offset: 0.125em;
+:where(h1, h2, h3, h4, h5, h6) {
+  --font-weight-strong: var(--font-weight-heading);
+  color: var(--fg-400);
+  font: var(--font-weight-heading, 700) 1em/1.3 var(--ff-heading);
+
+  :where(a) {
+    color: var(--heading-link-color);
+
+    &:hover {
+      color: var(--heading-link-color-hover);
+    }
+  }
 }
 
-kbd {
-  display: inline-block;
-  background: var(--kbd-background);
-  font-family: var(--ff-mono);
-  font-size: .75em;
-  font-weight: 700;
-  letter-spacing: 0;
-  white-space: nowrap;
-  padding: 0 0.375em;
-  border-radius: 2px;
-  box-shadow: 0 0 1px var(--fg-500), 0 1px 1px rgb(0 0 0 / 20%);
-  transform: translateY(-1px);
-}
-
-th {
-  text-align: left;
-}
-
-code {
-  background: var(--code-background-inline);
-  font-family: var(--ff-mono);
-  font-size: .75em;
-  letter-spacing: 0;
-  word-wrap: break-word;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-  padding: .375em .25em;
-  border-radius: 2px;
-}
-
-mark {
-  &:where([class]) {
-    background: none;
+img {
+  &[data-lightbox] {
+    cursor: zoom-in;
   }
 }
